# search-c

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
search/: CMakeLists.txt  search.c
search/include/: search.h
